Fixes for older TeXLive, ad-hoc patches

--- a/stamps/a6-landscape.tex
+++ b/stamps/a6-landscape.tex
@@ -1,6 +1,7 @@
 \documentclass{article}
 \usepackage{fontspec}
 \usepackage[a6paper,hmargin=0mm,vmargin=7mm,landscape]{geometry}
+\usepackage{graphicx}
 
 \setlength{\parindent}{0pt}
 \pagestyle{empty}
