--- a/stamps/a7-portrait.tex
+++ b/stamps/a7-portrait.tex
@@ -1,6 +1,7 @@
 \documentclass{article}
 \usepackage{fontspec}
 \usepackage[a7paper,hmargin=0mm,vmargin=7mm,portrait]{geometry}
+\usepackage{graphicx}
 
 \setlength{\parindent}{0pt}
 \pagestyle{empty}
