--- a/stamps/cig.tex
+++ b/stamps/cig.tex
@@ -3,6 +3,7 @@
 \usepackage[a4paper,hmargin=0mm,vmargin=7mm,portrait]{geometry}
 \usepackage{tabularx}
 \usepackage{array}
+\usepackage{graphicx}
 
 \setlength{\parindent}{0pt}
 \newlength{\tabh}
