--- a/stamps/inner-template.tex
+++ b/stamps/inner-template.tex
@@ -1,2 +1,2 @@
-\includegraphics[height=15mm]{kachna.eps}
+\includegraphics[height=15mm]{kachna_2014_mala.pdf}
 \raisebox{5mm}{Stanoviště \textbf{@num@}/@name@}
